# workshop-genai-student

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
notebooks/: Agent.ipynb
workshop_genai_student/: Agent.ipynb  llm_model.py  send_sub.py  submission_client.py
