# pyproject.toml
[tool.poetry]
name = "workshop-genai-student"
version = "0.1.0"
description = "GenAI Workshop Competition API"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "workshop_genai_student"}]

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"  # Updated Python version constraint
crewai = "0.28.8"
crewai-tools = "0.1.6"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
jupyterlab = "^4.0.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
langchain-anthropic = "0.1.13"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"